--- a/game/shop.html
+++ b/game/shop.html
@@ -5,131 +5,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop</title>
-    <link rel="stylesheet" href="battle.css">
-    <style>
-        :root {
-            --scene-w: 720px;
-            --scene-h: 504px;
-            --side-w: 320px;
-            --gap: 16px;
-        }
-
-        body {
-            margin: 0;
-            font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
-            background: url("../assets/overworld.png") center/cover no-repeat fixed;
-            color: #e7edf5;
-            text-align: center;
-        }
-
-        #shop-layout {
-            width: min(100%, calc(var(--scene-w) + var(--side-w) + var(--gap) + 24px));
-            margin: 0 auto 24px;
-            padding: 0 12px;
-            display: grid;
-            grid-template-columns: var(--scene-w) var(--side-w);
-            gap: var(--gap);
-            align-items: start;
-        }
-
-        .scene {
-            position: relative;
-            width: var(--scene-w);
-            height: var(--scene-h);
-            margin: 8px auto;
-            overflow: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: rgba(0, 0, 0, .25);
-            border-radius: 12px;
-        }
-
-        #character-image {
-            max-width: 50%;
-            image-rendering: pixelated;
-        }
-
-        #console {
-            background: rgba(0, 0, 0, .35);
-            padding: 10px 12px;
-            border-radius: 8px;
-            text-align: left;
-            width: var(--scene-w);
-            margin: 0 auto;
-            min-height: 54px;
-            box-sizing: border-box;
-        }
-
-        #sidebar {
-            display: grid;
-            gap: var(--gap);
-        }
-
-        #character-info {
-            background: rgba(0, 0, 0, .75);
-            padding: 12px;
-            border-radius: 8px;
-            text-align: left;
-        }
-
-        #shop-items {
-            display: grid;
-            gap: 10px;
-        }
-
-        .shop-btn {
-            padding: 10px 12px;
-            border: 2px solid #3a4a5f;
-            background: #16212e;
-            color: #e7edf5;
-            border-radius: 10px;
-            cursor: pointer;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .shop-btn:disabled {
-            opacity: 0.5;
-            cursor: not-allowed;
-        }
-    </style>
+    <link rel="stylesheet" href="shop.css">
 </head>
 
 <body>
-    <h1>Shop</h1>
+    <div id="title-container">
+        <img id="shop-title" src="../assets/sprites/title_bar.png" alt="Shop Title">
+        <span id="title_name">Shop</span>
+    </div>
 
-    <div id="shop-layout">
-        <div id="left">
-            <div class="scene">
-                <img id="character-image" alt="Character">
-            </div>
-            <div id="console">
-                <p id="shop-text">Welcome to the shop!</p>
+    <!-- Player Stats Display -->
+    <div id="player-stats">
+        <div id="gold-display">Gold: <span id="gold-amount">0</span></div>
+        <div id="character-name">Character: <span id="char-name">Unknown</span></div>
+        <div id="health-display">Health: <span id="current-hp">0</span>/<span id="max-hp">0</span></div>
+        <div id="attack-display">Extra Attack: <span id="attack-power">0</span></div>
+    </div>
+
+    <!-- Shop GIF in center -->
+    <div id="shop-gif-container">
+        <img id="shop-gif" src="../assets/shop.gif" alt="Shop Animation">
+    </div>
+
+    <!-- Shop Items Grid -->
+    <div id="shop-container" class="shop-grid">
+        <div class="shop-card">
+            <img src="../assets/sprites/card_background.png" class="card-bg" alt="Card Background">
+            <div class="item-info">
+                <h3>Health Potion</h3>
+                <p class="item-description">Restores 50 HP instantly</p>
+                <p class="item-price">Cost: 25 Gold</p>
+                <img src="../assets/sprites/select_button.png" class="buy-btn" data-item="health_restore" data-cost="25"
+                    alt="Buy Button">
             </div>
         </div>
 
-        <!-- Shop Items Grid -->
-        <div id="shop-container" class="shop-grid">
-            <div class="shop-card">
-                <img src="../assets/sprites/card_background.png" class="card-bg" alt="Card Background">
-                <div class="item-info">
-                    <h3>Health Potion</h3>
-                    <p class="item-description">Restores 50 HP instantly</p>
-                    <p class="item-price">Cost: 25 Gold</p>
-                    <img src="../assets/sprites/select_button.png" class="buy-btn" data-item="health_restore"
-                        data-cost="25" alt="Buy Button">
-                </div>
-            </div>
-
-            <div id="shop-items">
-                <h4>Buy Permanent Buffs</h4>
-                <button class="shop-btn" id="buy-hp">+20 Max HP (50 Gold)</button>
-                <button class="shop-btn" id="upgrade-ability">Upgrade Ability Damage (+5) (100 Gold)</button>
-                <button class="shop-btn" id="exit-shop">Exit Shop</button>
+        <div class="shop-card">
+            <img src="../assets/sprites/card_background.png" class="card-bg" alt="Card Background">
+            <div class="item-info">
+                <h3>Strength Elixir</h3>
+                <p class="item-description">+10 Attack damage permanently</p>
+                <p class="item-price">Cost: 100 Gold</p>
+                <img src="../assets/sprites/select_button.png" class="buy-btn" data-item="strength_buff" data-cost="100"
+                    alt="Buy Button">
             </div>
         </div>
+
+        <div class="shop-card">
+            <img src="../assets/sprites/card_background.png" class="card-bg" alt="Card Background">
+            <div class="item-info">
+                <h3>Vitality Boost</h3>
+                <p class="item-description">+20 Max HP permanently</p>
+                <p class="item-price">Cost: 150 Gold</p>
+                <img src="../assets/sprites/select_button.png" class="buy-btn" data-item="health_buff" data-cost="150"
+                    alt="Buy Button">
+            </div>
+        </div>
+    </div>
+
+    <!-- Navigation Buttons -->
+    <div id="nav-buttons">
+        <button id="back-btn" onclick="goBack()">Back to Overworld</button>
     </div>
 
     <script src="../assets/js/characters.js"></script>
