added background for dungeon, fix oversight in having no battle for dungeon and forest

--- a/game/dungeon_battle.html
+++ b/game/dungeon_battle.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Forest Battle</title>
+  <title>Dungeon Battle</title>
   <link rel="stylesheet" href="battle.css" />
   <style>
     :root {
@@ -117,7 +117,7 @@
 </head>
 
 <body>
-  <h1>Forest Battle</h1>
+  <h1>Dungeon Battle</h1>
 
   <div id="battle-layout">
     <div id="left">
@@ -127,7 +127,7 @@
         <div class="frame-border"></div>
       </div>
       <div id="console">
-        <p id="battleText">A forest enemy appears!</p>
+        <p id="battleText">A dungeon enemy appears!</p>
       </div>
     </div>
 
@@ -160,7 +160,7 @@
 
   <script>
     const qs = new URLSearchParams(location.search);
-    const regionKey = "forest";
+    const regionKey = "dungeon";
     const charData = qs.get("character");
     let character = charData ? JSON.parse(decodeURIComponent(charData)) : null;
 
