--- a/game/overworld.html
+++ b/game/overworld.html
@@ -91,7 +91,7 @@
         case "shop": return "shop.html";
         case "forest": return "forest_battle.html";
         case "temple": return "temple_battle1.html";
-        case "dungeon": return "dungeon.html";
+        case "dungeon": return "dungeon_battle.html";
         default: return "overworld.html";
       }
     }
