added battle frame image to forest battle scene

--- a/game/forest_battle.html
+++ b/game/forest_battle.html
@@ -124,6 +124,7 @@
       <div class="scene">
         <div id="region-bg"></div>
         <img id="enemy-image" alt="Enemy" />
+        <img id="frame" src="../assets/sprites/battle_background.png" alt="Frame" />
         <div class="frame-border"></div>
       </div>
       <div id="console">
